infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jukebox
  labels:
    kubernetes.io/metadata.name: jukebox
