infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jukebox-service
  namespace: jukebox
spec:
  type: NodePort
  selector:
    app: jukebox
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
